update mail server

--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@ Reprehenderit soluta, eos quod consequuntur itaque. -->
 													<i class="far fa-check-circle"></i>Thank you, your message has been sent.
 												</div>
                                 				<div id="error">
-													<i class="far fa-times-circle"></i>Mail server is under maintenance. Please try again later. We apologize for this inconvience!
+													<i class="far fa-times-circle"></i>The mail server is under maintenance. Please try again later. I apologize for this inconvenience!
 														<!-- Error occurred while sending email. Please try again later. -->
 												</div>
 											</div>
