Minor bug fixed

--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@ Reprehenderit soluta, eos quod consequuntur itaque. -->
 							<div class="col-lg-4 col-sm-12 info">
 								<i class="fas fa-map-marker-alt"></i>
          						<p>123 Lorem Ipsum, Hanoi, VN</p>
-          						<span>Addres</span>
+          						<span>Address</span>
 							</div>	
 							<div class="col-lg-4 col-sm-12 info">
 								<i class="fas fa-phone"></i>
