Update Blog link

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Reprehenderit soluta, eos quod consequuntur itaque. -->
             			<a href="#portfolio" class="icon-p fas fa-briefcase"></a>
 					</li>
 					<li data-tooltip="blog" data-position="top">
-            			<a href="http://dangnh.freevnn.com/cms" class="icon-b fas fa-blog" target="_blank"></a>
+            			<a href="https://www.dang.rf.gd/" class="icon-b fas fa-blog" target="_blank"></a>
 					</li>
 					<li data-tooltip="contact" data-position="bottom">
 						<a href="#contact" class="icon-c fas fa-envelope"></a>
