--- a/index.html
+++ b/index.html
@@ -88,12 +88,17 @@ Reprehenderit soluta, eos quod consequuntur itaque. -->
             			<a href="#portfolio" class="icon-p fas fa-briefcase"></a>
 					</li>
 					<li data-tooltip="blog" data-position="top">
-            			<a href="https://dang.epizy.com/" class="icon-b fas fa-blog" target="_blank"></a>
+            			<a href="on_going()" class="icon-b fas fa-blog" target="_blank"></a>
 					</li>
 					<li data-tooltip="contact" data-position="bottom">
 						<a href="#contact" class="icon-c fas fa-envelope"></a>
 					</li>
           		</ul>
+			<script>
+				function on_going() {
+					alert("We are working on it");
+				}
+			</script>
 				
 				<!-- Sound wave -->
     			<a class="music-bg">
