--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Reprehenderit soluta, eos quod consequuntur itaque. -->
             			<a href="#portfolio" class="icon-p fas fa-briefcase"></a>
 					</li>
 					<li data-tooltip="blog" data-position="top">
-            			<a href="on_going()" class="icon-b fas fa-blog" target="_blank"></a>
+            			<a href="#" onclick="on_going()" class="icon-b fas fa-blog" target="_blank"></a>
 					</li>
 					<li data-tooltip="contact" data-position="bottom">
 						<a href="#contact" class="icon-c fas fa-envelope"></a>
