--- a/joke/index.html
+++ b/joke/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-image: url('background.jpg'); /* Thay thế bằng URL hình nền của bạn */
+            background-image: url('https://dang2d.github.io/joke/background.jpg');
             background-size: cover;
             padding: 50px;
         }
