--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ Reprehenderit soluta, eos quod consequuntur itaque. -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="apple-itunes-app" content="app-id=284882215">
+
 		<!-- meta http-equiv="refresh" content=";countdown" -->
 		
 		<!-- Title -->
