--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Reprehenderit soluta, eos quod consequuntur itaque. -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="apple-itunes-app" content="app-id=1581140954">
+	<!-- meta name="apple-itunes-app" content="app-id=1581140954" -->
 
 		<!-- meta http-equiv="refresh" content=";countdown" -->
 		
